# firefox-dts

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  ci.nix  default.nix  derivation.nix  iterate_idl.sh  tsconfig.json  xpidl.d.ts
.github/workflows/: firefox-dts.yml
cmake/: esbuild.cmake  gen.cmake  git.cmake  node.cmake  ts.cmake  util.cmake
cmake/languages/: CMakeTypeScriptInformation.cmake
firefox-idl/: Makefile  default.nix  firefox-idl.nix  webidl.nix  xpidl.nix
src/: CMakeLists.txt  modules.d.ts  native.d.ts  nsid.d.ts  package.json  tsconfig.json  webidl.d.ts  xpidl.d.ts
tests/: CMakeLists.txt  cc.ts  ns.ts  services.ts  tsconfig.json
xpcom/: CMakeLists.txt  index.ts  package.json  tsconfig.json
xpidl-dts/: default.nix  derivation.nix  dts.py  setup.py
